<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Tech-Mark Employees</string>

    <string name="tech_mark">TECH MARK</string>

    <string name="digi_sol">Digital Solutions</string>

    <string name="login_with_email">Login with EMAIL</string>

    <string name="create_account">Create account</string>

    <string name="sign_up">Sign up</string>

    <string name="emp_app">Employee version</string>

    <string name="welcome_back">Welcome back !</string>

    <string name="showpass">Show password</string>

    <string name="login">Login</string>

    <string name="upload_picture">Upload profile picture</string>

    <string name="choose_image">Choose image</string>

    <string name="welcome">Welcome to</string>

    <string name="select_post">Select your team</string>

    <string name="next">Next</string>

    <string name="type_email">Type your email</string>

    <string name="type_pass">Type your passsword</string>
    <string name="type_name">Type your name</string>
    <string name="type_phone">Type your phone number</string>

    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>

    <string name="logging" tools:ignore="TypographyEllipsis">Logging in...</string>

    <string name="new_lead">New lead</string>

    <string name="newLead">Create new lead</string>


    // Menu items

    <string name="profile">Profile</string>

    <string name="leads">BDM assigned leads</string>

    <string name="sale">My sales</string>

    <string name="sign_out">Sign out</string>

    <string name="cnl">Create New Lead</string>

    // new lead activity

    <string name="lead_name">Lead\'s name</string>

    <string name="lead_email">Lead\'s email address</string>
    <string name="lead_phone">Lead\'s phone number</string>
    <string name="business_name">Business name</string>
    <string name="business_address">Business address</string>
    <string name="meeting_date">Meeting date</string>
    <string name="meeting_time">Meeting time</string>
    <string name="done">Done</string>
    <string name="all_leads">All leads</string>


    // BDE home page

    <string name="search">Search</string>
    <string name="confirm_sign_out">Do you really want to sign out ?</string>
    <string name="confirm">Confirm</string>
    <string name="calender">Search meetings by date</string>
    <string name="show_today_meetings">Show today\'s meetings</string>


    // BDM home page

    <string name="done_deals">My done deals</string>
    <string name="showing_meetings">Showing you your meetings of</string>
    <string name="today">Today\'s date</string>
    <string name="lead_org_name">Lead organization name</string>

    // BDM meeting card

    <string name="lead_person_name">Lead person name</string>
    <string name="address">Organization address</string>
    <string name="time">Meeting time</string>
    <string name="call">Make a call</string>
    <string name="business_details">Business details</string>


    // BDM meeting details

    <string name="owner_details">Business owner\'s details</string>
    <string name="date_time">Meeting date &amp; time</string>
    <string name="bde_name">BDE name</string>

    <string name="bde_email">BDE email</string>
    <string name="bde_phone">BDE phone</string>
    <string name="bde_details">Business development executive details</string>

    <string name="no_meetings">No meetings found for today</string>

    <string name="services">Services</string>
    <string name="development_services">Development services</string>
    <string name="go_back">Go back</string>
    <string name="website">Website development</string>


    // Development services

    <string name="e_commerce">E-commerce development</string>
    <string name="mobile_app">Mobile app development</string>
    <string name="portal">Portal development</string>
    <string name="graphics">Graphics designing</string>
    <string name="google_business">Google business development</string>
    <string name="mlm">MLM software</string>
    <string name="management_services">Management services</string>

    // Management services

    <string name="school">School management</string>
    <string name="crm">Customer relationship management</string>
    <string name="hospital">Hospital management system</string>
    <string name="hotel">Hotel management system</string>
    <string name="marketing">Marketing services</string>


    // Marketing services

    <string name="social">Social media marketing</string>
    <string name="sms">SMS marketing</string>
    <string name="whatsapp">Whatsapp marketing</string>
    <string name="email">Email marketing</string>
    <string name="telecom">Telecom services</string>

    // telecom services

    <string name="c2c">C2C services</string>
    <string name="telecon">Teleconferencing services</string>
    <string name="ivr">IVR services</string>
    <string name="advertising">Advertising services</string>

    // Advertising services

    <string name="online">Online advertising</string>
    <string name="brand">Brand creation</string>
    <string name="google_advertising">Google advertising</string>
    <string name="facebook_promotion">Facebook promotion</string>
    <string name="video">Video marketing</string>
    <string name="voice">Voice SMS</string>
    <string name="google_ads">Google ads</string>
    <string name="choose_services">Select services</string>

    // meeting menu

    <string name="delete_lead">Delete this lead</string>
    <string name="payment_details">Payment details</string>

    <string name="total">Total amount</string>

    // Payment details

    <string name="paid">Paid amount</string>

    <string name="remaining">Remaining amount</string>
    <string name="remaining_head">Remaining amount : </string>
    <string name="your_name">Name</string>
    <string name="your_email">Email</string>

    // Profile

    <string name="your_phone">Phone</string>
    <string name="designation">Designation</string>
    <string name="change_pass">Change password</string>
    <string name="bde">Business development executive</string>
    <string name="bdm">Business development manager</string>
    <string name="cancel">Cancel</string>
    <string name="new_pass">Enter new password</string>
    <string name="new_pass_again">Enter new password again</string>
    <string name="select_date">Select date</string>
    <string name="showing_all_leads">Showing all leads</string>

    // Assigned BDM

    <string name="show_done_deals">Show all closed deals</string>
    <string name="done_deals_with_date">Sort closed deals with date</string>
    <string name="show_all_pending_deals">Show all pending deals</string>
    <string name="pending_deals_with_date">Sort pending deals with date</string>

    <string name="remove_date">Remove date filter</string>
    <string name="show_all">Show all leads</string>

    <string name="bdm_name">BDM</string>
    <string name="mode">Payment mode :</string>

    // Meeitng details

    <string name="amount">Amount</string>
    <string name="nan">The meeting has not been made between the business development manager and the client yet.</string>
    <string-array name="posts">
        <item>Select your team</item>
        <item>Business Development Executive</item>
        <item>Business Development Manager</item>
        <item>IT Team</item>
    </string-array>

    <string-array name="mode">

        <item>Payment mode</item>
        <item>Cash</item>
        <item>Online money transfer</item>
        <item>Cheque</item>

    </string-array>

    <string name="make_call">Call</string>
    <string name="make_email">Email</string>




</resources>