<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/logo_colour"
        android:transitionName="image">

    </ImageView>

    <TextView
        android:id="@+id/wb_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ambit_bold"
        android:text="@string/welcome_back"
        android:layout_below="@id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_email_color"
        android:id="@+id/login_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/white_round_corner"
        android:hint="@string/type_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/ambit_regular"
        android:layout_below="@id/wb_head"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:background="@drawable/white_round_corner"
        android:hint="@string/type_pass"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_password_color"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/ambit_regular"
        android:layout_below="@id/login_email"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

    </EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showpass"
        android:id="@+id/show_pass_check"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/ambit_regular"
        android:layout_below="@id/login_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

    </CheckBox>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:background="@drawable/btn_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/show_pass_check"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/ambit_bold">

    </Button>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

    </ProgressBar>


</RelativeLayout>