<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/change_pass"
            android:textColor="@color/white"
            android:gravity="center">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_pass_et_one"
                android:paddingStart="10dp"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password_color">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_pass_et_two"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:hint="@string/new_pass_again"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password_color">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/call_green"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="20dp">

        </Button>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

        </View>

    </LinearLayout>

</androidx.cardview.widget.CardView>