<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/splash_bg">

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:scaleX="1.7"
        android:alpha="0"
        android:transitionName="image"
        android:scaleY="1.7"
        android:src="@drawable/logo_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ambit_regular"
        android:text="@string/tech_mark"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="5dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ambit_regular"
        android:text="@string/digi_sol"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.937"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/splash_login_btn"
            android:drawableStart="@drawable/ic_email_white"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ambit_regular"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/login_with_email"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </Button>

        <Button
            android:id="@+id/create_acc_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/splash_login_btn"
            android:fontFamily="@font/ambit_regular"
            android:padding="10dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>